--- a/docs/guides/apps/get-started.mdx
+++ b/docs/guides/apps/get-started.mdx
@@ -7,7 +7,7 @@ To get started with creating live video calls from Dyte, make sure to finish the
 
 import Setup from '/docs/partials/_setup.mdx';
 
-<Setup slug={'build-voice-app'} />
+<Setup slug={'app'} />
 
 <Head>
   <title>Setup Guide</title>
