--- a/docs/partials/_product-section.mdx
+++ b/docs/partials/_product-section.mdx
@@ -3,6 +3,10 @@ import {
   LiveRegular,
   MicRegular,
   VideoRegular,
+CartRegular,
+ClassificationRegular,
+ContentViewRegular,
+CubeTreeRegular,
 } from '@fluentui/react-icons';
 
 <CardSection
@@ -11,27 +15,27 @@ import {
   description="Learn how to integrate live video and voice, live stream, and chat experiences into your product."
 >
   <Card
-    title="Live Video"
-    icon={<VideoRegular />}
+    title="Classification"
+    icon={<CubeTreeRegular />}
     to="/guides/live-video/intro-video-conf"
     description="Add live video functionality to your web, mobile, and desktop applications."
   />
   <Card
-    title="Voice Conferencing"
-    icon={<MicRegular />}
+    title="Commerce"
+    icon={<CartRegular />}
     to="/guides/voice-conf/intro-voice-conf"
     description="Integrate reliable voice calling experiences into your product."
   />
   <Card
-    title="Interactive Livestreaming"
-    icon={<LiveRegular />}
+    title="Content"
+    icon={<ContentViewRegular />}
     to="/guides/livestream/livestream-overview"
     description="Get started with interactive livestreaming and broadcast to a large audience"
   />
-  {/* <Card
-    title="Realtime Chat"
+  <Card
+    title="Communication"
     icon={<ChatMultipleRegular />}
     to="/guides/realtime-chat/intro-chat"
     description="Create interactive and collaborative in-app chat experiences."
-  /> */}
+  />
 </CardSection>
