--- a/docs/guides/guides.mdx
+++ b/docs/guides/guides.mdx
@@ -3,7 +3,7 @@ slug: /
 sidebar_position: 1
 sidebar_class_name: guide_sidebar_index
 description: >-
-  "Explore a variety of guides to enhance your Dyte experience. From AI
+  "Explore a variety of guides to enhance your ProductDB experience. From AI
   capabilities to customization
 ---
 
