--- a/docs/guides/classification/client-setup/android.mdx
+++ b/docs/guides/classification/client-setup/android.mdx
@@ -1,7 +1,7 @@
 ---
 title: Android
 pagination_prev: null
-pagination_next: live-video/next-steps
+pagination_next: classification/next-steps
 sidebar_position: 4
 description: >-
   Learn how to set up the client for live video on Android with Dyte's features.
