--- a/docs/guides/commerce/client-setup/android.mdx
+++ b/docs/guides/commerce/client-setup/android.mdx
@@ -1,7 +1,7 @@
 ---
 title: Android
 pagination_prev: null
-pagination_next: voice-conf/next-steps
+pagination_next: commerce/next-steps
 sidebar_position: 4
 ---
 
