--- a/docs/guides/commerce/client-setup/ios.mdx
+++ b/docs/guides/commerce/client-setup/ios.mdx
@@ -2,7 +2,7 @@
 title: iOS
 sidebar_position: 5
 pagination_prev: null
-pagination_next: voice-conf/next-steps
+pagination_next: commerce/next-steps
 ---
 
 import Quickstart from '/docs/partials/_ios-quickstart.mdx';
