--- a/docs/guides/commerce/client-setup/javascript.mdx
+++ b/docs/guides/commerce/client-setup/javascript.mdx
@@ -2,7 +2,7 @@
 title: Web (Other)
 sidebar_position: 3
 pagination_prev: null
-pagination_next: voice-conf/next-steps
+pagination_next: commerce/next-steps
 ---
 
 import Quickstart from '/docs/partials/_html-quickstart.mdx';
