--- a/docs/guides/classification/client-setup/angular.mdx
+++ b/docs/guides/classification/client-setup/angular.mdx
@@ -1,7 +1,7 @@
 ---
 title: Angular
 pagination_prev: null
-pagination_next: live-video/next-steps
+pagination_next: classification/next-steps
 sidebar_position: 2
 description: >-
   Explore the setup of the client for live video in Angular with Dyte's
