--- a/docs/guides/classification/client-setup/flutter.mdx
+++ b/docs/guides/classification/client-setup/flutter.mdx
@@ -1,7 +1,7 @@
 ---
 title: Flutter
 pagination_prev: null
-pagination_next: live-video/next-steps
+pagination_next: classification/next-steps
 sidebar_position: 6
 description: >-
   Learn how to set up the client for live video in Flutter with Dyte's features.
