--- a/docs/guides/classification/client-setup/ios.mdx
+++ b/docs/guides/classification/client-setup/ios.mdx
@@ -1,7 +1,7 @@
 ---
 title: iOS
 pagination_prev: null
-pagination_next: live-video/next-steps
+pagination_next: classification/next-steps
 sidebar_position: 5
 description: >-
   Get started with setting up the client for live video on iOS with Dyte's
