--- a/docs/guides/classification/client-setup/javascript.mdx
+++ b/docs/guides/classification/client-setup/javascript.mdx
@@ -2,7 +2,7 @@
 title: Web (Other)
 sidebar_position: 3
 pagination_prev: null
-pagination_next: live-video/next-steps
+pagination_next: classification/next-steps
 description: >-
   Explore the setup of the client for live video in JavaScript with Dyte's
   features. Follow our guide for effective JavaScript client setup.
