--- a/docs/guides/classification/client-setup/react.mdx
+++ b/docs/guides/classification/client-setup/react.mdx
@@ -2,7 +2,7 @@
 title: React
 sidebar_position: 1
 pagination_prev: null
-pagination_next: live-video/next-steps
+pagination_next: classification/next-steps
 description: >-
   Learn how to set up the Dyte Live Video client in React. Follow our guide for
   effective React client setup and integration.
