--- a/docs/guides/commerce/client-setup/angular.mdx
+++ b/docs/guides/commerce/client-setup/angular.mdx
@@ -2,7 +2,7 @@
 title: Angular
 sidebar_position: 2
 pagination_prev: null
-pagination_next: voice-conf/next-steps
+pagination_next: commerce/next-steps
 ---
 
 import Quickstart from '/docs/partials/_angular-quickstart.mdx';
