--- a/docs/guides/commerce/client-setup/flutter.mdx
+++ b/docs/guides/commerce/client-setup/flutter.mdx
@@ -2,7 +2,7 @@
 title: Flutter
 sidebar_position: 6
 pagination_prev: null
-pagination_next: voice-conf/next-steps
+ppagination_next: commerce/next-steps
 ---
 
 import Quickstart from '/docs/partials/_flutter-quickstart.mdx';
