--- a/docs/guides/commerce/client-setup/react.mdx
+++ b/docs/guides/commerce/client-setup/react.mdx
@@ -2,7 +2,7 @@
 title: React
 sidebar_position: 1
 pagination_prev: null
-pagination_next: voice-conf/next-steps
+pagination_next: commerce/next-steps
 ---
 
 import Quickstart from '/docs/partials/_react-quickstart.mdx';
