--- a/docs/guides/classification/build-live-video-app.mdx
+++ b/docs/guides/classification/build-live-video-app.mdx
@@ -9,8 +9,8 @@ description: >-
 import IntegrateDyte from '/docs/partials/_integrate-dyte.mdx';
 
 <IntegrateDyte
-  product="Live Video"
-  productSlug="live-video"
+  product="Classification"
+  productSlug="classification"
   preset="Group Call"
   presetType="group-call"
 ></IntegrateDyte>
