--- a/docs/guides/commerce/build-voice-app.mdx
+++ b/docs/guides/commerce/build-voice-app.mdx
@@ -6,8 +6,8 @@ sidebar_position: 4
 import IntegrateDyte from '/docs/partials/_integrate-dyte.mdx';
 
 <IntegrateDyte
-  product="Voice Conferencing"
-  productSlug="voice-conf"
+  product="Commerce"
+  productSlug="commerce"
   preset="Group Call"
   presetType="group-call"
 />
